public/css/main.css
/* ... */
#page-title a:hover { text-decoration: none }

#main { padding: 2em 4em 4em}
#topbar > div > div { padding: 2em }

#topcorner div.region-pick { font-size: 125%; display: none }
#topcorner .region-realm { font-size: 125%; position: relative }
#topcorner span.region { cursor: default }
#realm-favstar { cursor: pointer; font-size: 1.2em }
#realm-favstar span { display: none }
#realm-favstar.on .star-lit { display: inline }
#realm-favstar.off .star-dark { display: inline }

#topcorner div.region-pick a { font-size: 80%; font-style: italic; display: block; margin: 0.5em 0; text-align: right }

#topcorner form {margin: 0}
#topcorner input {text-size: 150%; margin: 1em 0; padding: 0.5em; width: 100%; width: calc(100% - 1.5em); border: 0.25em solid #444; box-shadow: 0.3em 0.3em #999 }

#favorite-realms {
    position: absolute; z-index: 5;
    border: 1px solid #444; padding: 0.25em;
    box-shadow: 0.2em 0.2em rgba(153,153,153,0.5); background-color: white;
    top: 100%; left: -1px; width: 100%; width: calc(100% - 0.5em);
    visibility: hidden
}
#favorite-realms a { display: block; margin: 0.2em 0.5em; font-size: 75% }
#topcorner .region-realm:hover #favorite-realms.with-realms { transition: visibility 0s 0.25s; visibility: visible }

#topcorner #realm-updated { font-size: 75% }

#topcorner .no-realm-hide { display: none }
#topcorner.with-realm .no-realm-hide { display: block }

.ad, .adsubstitute { width: 728px; height: 90px; margin: 1em auto }
.ad.box, .adsubstitute.box { width: 336px; height: 280px; display: inline-block; margin: 1em 0 }

.adsubstitute { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; border: 1px dashed black; padding: 5px; text-align: center }
.adsubstitute.box > div { margin: 1.5em 0 }
.adsubstitute a { text-decoration: underline; white-space: nowrap }

.ad > .adsbygoogle { display:inline-block; width:728px; height:90px }
.ad.box > .adsbygoogle { display:inline-block; width:336px; height:280px }
.adsubstitute > .adsbygoogle { display: none }

.q0, .q0 a { color: #9d9d9d } /* Poor */
.q1, .q1 a { color: #ffffff } /* Common */
.q2, .q2 a { color: #1eff00 } /* Uncommon */
.q3, .q3 a { color: #0070dd } /* Rare */
.q4, .q4 a { color: #a335ee } /* Epic */
.q5, .q5 a { color: #ff8000 } /* Legendary */
.q6, .q6 a { color: #e5cc80 } /* Artifact */
.q7, .q7 a { color: #e5cc80 } /* Heirloom */

.wowhead-tooltip-powered { visibility: hidden }
.wowhead-tooltip > table { background-color: black; border-radius: 5px }

span.price.full, span.age, span.nowrap { white-space: nowrap }
abbr.full-date { border-bottom: 0 }
abbr:hover.full-date { border-bottom: 1px dotted }

#realm-list, #region-page {display: none; text-align: center}
#realm-list .directions, #region-page .directions {font-size: 150%; margin: 0 auto 2rem }
#realm-list.show {display: block}
.realms-column {-moz-column-width: 15em; -webkit-column-width: 15em; column-width: 15em; text-align: left}
.realms-column a {display: block; margin: 0.3em 0}

.realms-column[data-region="KR"], .realms-column[data-region="TW"]
    {-moz-column-width: unset; -webkit-column-width: unset; column-width: unset}
.realms-column[data-region="KR"] a, .realms-column[data-region="TW"] a
    {width: 10em; margin: 0.3em auto}

#main > .page { display: none }

#front-page {position: relative; padding-right: 2em}
#front-page a {text-decoration: underline}
.news { max-width: 55em; margin: 2em 0; line-height: 1.5em }
.news.no-margin { margin: 0 }
.center { margin: 2em auto; text-align: center }
.news hr, .center hr { margin: 30px 0 }
#front-page .banned { color: #990000; border-left: 2px solid red; padding: 1em; display: none }
#front-page .banned b { color: red }
#front-page .top-list { float: left; margin: 2em 2em 2em 0; line-height: 1.4em }
#front-page .top-list h3 { margin: 0 0 1em }
#front-page .top-list a{text-decoration: none}
#front-page .top-list:empty { display: none }

#progress-page { padding: 3em; text-align: center; }
#progress-page div { background-image: url("../images/progress.gif"); background-repeat: no-repeat; background-position: center; height: 20px; }

#search-page table, table.auctionlist, table.category, .custom-textarea { width: 54em; margin: 0 auto 2em; border-spacing: 0 }
#search-page table th, table.auctionlist th, table.category th {padding: 0.4em 0.2em 0; border-bottom: 1px solid #CCC; font-weight: normal}
#search-page table td, table.auctionlist td, table.category td {padding: 0.2em 0.4em; vertical-align: top}
#search-page tr:hover td, table.auctionlist tr:hover td, table.category tr:hover td, td.hover {background-color: #EEE}

#search-page th.title, table.category th.title { font-size: 125%; position: relative }

table.auctionlist { margin: 0 auto }
table.auctionlist td.price abbr { border-bottom: 0 }
table.auctionlist td.price abbr:hover { border-bottom: 1px dotted }
table.auctionlist td.seller, table.auctionlist th.seller { text-align: left; vertical-align: top }

table.sellerlist {margin:0 auto; width:30em}
table.sellerlist .seller {text-align: left}
table.sellerlist .lastseen {text-align: right}

span.import-toggle { position: absolute; top: 5px; right: 5px; border: 1px solid #999; border-radius: 5px; padding: 2px; font-size: 50%; cursor: pointer }
table.category th.import-string { padding-left: 0; padding-right: 0 }
table.category th.import-string input { width: 100%; border: 0 }

tr.blank { height: 0.5em }
td.price abbr { text-decoration: none }

td.breed, th.breed,
td.quality, th.quality,
td.name, th.name { text-align: left; cursor: default }
td.icon, th.icon { width: 1.5em; height: 1.5em; padding-right: 0 ! important; text-align: right }
td.icon.double, th.icon.double { width: 3.2em }
td.icon.double img:first-child, th.icon.double img:first-child { padding-right: 0.2em }
td.icon img, th.icon img { border-radius: 3px; }
img.icon {width: 1.5em; height: 1.5em}
td.price, th.price,
td.quantity, th.quantity,
td.level, th.level,
td.date, th.date { text-align: right; cursor: default }
/* ... */

